# thesis-template

./: .gitignore  README.md  hello.py  mkdocs.yml  pyproject.toml  pyrightconfig.json
docs/: index.md  milestones.md
docs/process/: 01-literature-survey.md  02-research-question.md  03-development-environment.md  04-exploratory-data-analysis.md  05-tracking-experiments.md  06-exploring-results.md  07-writing.md
docs/sections/: 05-experimental-setup.md
src/thesis/: config.py  data.py  extract.py  index.py  models.py  paths.py  transforms.py  utils.py
src/thesis/utils/: JSON.py  db.py  git.py  paths.py
