[project]
name = "thesis"
version = "0.1.0"
description = "Python repository for thesis"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.9.3",
    "numpy>=2.1.3",
    "pandas>=2.2.3",
    "rich>=13.9.4",
    "scikit-learn>=1.5.2",
]

[dependency-groups]
dev = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.5.48",
    "mkdocs-terminal>=4.6.0",
    "pytest>=8.3.4",
]
