[project]
name = "thesis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "manyids2", email = "arun.mukundan@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "datasette>=0.65.1",
    "pandas>=2.3.0",
    "rich>=14.0.0",
    "torch>=2.7.1",
    "torchvision>=0.22.1",
    "visidata>=3.2",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"
