[project]
name = "thesis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "manyids2", email = "arun.mukundan@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "datasette>=0.65.1",
    "distinctipy>=1.3.4",
    "mkdocs-material>=9.6.14",
    "mkdocs-mermaid2-plugin>=1.2.1",
    "neoteroi-mkdocs>=1.1.2",
    "pandas>=2.3.0",
    "rich>=14.0.0",
    "seaborn>=0.13.2",
    "term-image>=0.7.2",
    "torch>=2.7.1",
    "torchvision>=0.22.1",
    "ultralytics>=8.3.159",
    "visidata>=3.2",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"
